<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maths</string>
    <string name="action_settings">Settings</string>
    <string name="action_quiz">Quiz Me!</string>
    <string name="input_message">Input New User Name</string>
    <string name="new_user">New User</string>
    <string name="create_user">Create User</string>
    <string name="delete_user">Delete User</string>
    <string name="blank_user_error">Can\'t add a blank string as user. Must be at least one character.</string>
    <string name="new_user_error">Can\'t use the name \"New User\" for the user name.</string>
    <string name="user_exists_error">This user name already exists. Choose another.</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="select_user">Select User</string>
    <string name="select_quiz">Select Quiz</string>
    <string name="user_stats">User Statistics (Score)</string>
    <string name="delete_quiz">Delete Quiz</string>
    <string name="quiz_input_message">Input New Quiz Name</string>
    <string name="new_quiz">New Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="quiz_exists_error">Can\'t create a quiz that already exists.</string>
    <string name="new_quiz_error">Can\'t name the quiz \"New Quiz\".</string>
    <string name="blank_quiz_error">Can\'t add a blank string as quiz. Must be at least one character.</string>
    
    
</resources>
